samples/_failures_safe/1761702394_b75a44_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9fe0add9.c: In function ‘main’:
./samples/SAFE/__tmp_9fe0add9.c:152:5: error: expected expression at end of input
  152 |     while (cycle < max_cycles)
      |     ^~~~~
./samples/SAFE/__tmp_9fe0add9.c:152:5: error: expected declaration or statement at end of input
